--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
-<html>
-<head><title>exelans.store</title></head>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>exelans.store</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+    }
+    h1 {
+      font-size: 4rem;
+      color: #333;
+    }
+  </style>
+</head>
 <body>
-  <h1>bu site zuko tarafından geliştirilme aşamasındadır</h1>
+  <h1>Bu site zuko tarafından halla geliştirilme aşamasındadır</h1>
 </body>
 </html>
