--- a/index.html
+++ b/index.html
@@ -1,27 +1,92 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>exelans.store</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-    }
-    h1 {
-      font-size: 1rem;
-      color: #333;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>H4CK3D BY ZUKO </title>
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background-image:  url('https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyM24wcWJhcnFxeWxocmN1d3RlYzd3ZzAyZHVlcXpueXF1ZW4zbWFzMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l378w9GS8NljFYx5S/giphy.gif');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+        .content {
+            color: #ff3333;
+            font-size: 4rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 40px;
+            animation: glowing 2s ease-in-out infinite, textColor 5s infinite alternate;
+            text-shadow: 0 0 5px #ff0000, 0 0 10px #ff0000, 0 0 15px #ff0000, 0 0 20px #ff0000, 0 0 30px #ff0000, 0 0 40px #ff0000;
+        }
+
+        /* Parlama animasyonu */
+     @keyframes textColor {
+            0% { color: #ff3333; }
+            50% { color: #ff6600; }
+            100% { color: #ff3333; }
+        }
+
+        /* Renk geçişi animasyonu */
+        @keyframes textColor {
+            0% { color: #ff3333; }
+            50% { color: #ff6600; }
+            100% { color: #ff3333; }
+        }
+
+        /* Footer yazıları için stil */
+        .footer-content {
+          position: fixed;
+            bottom: 10px;
+            width: 100% ;
+            font-size: 1.5rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 10px;
+            color: #ff3333;
+            letter-spacing: 10px;
+            animation: glowing 2s ease-in-out infinite, textColor 5s infinite alternate;
+            text-shadow: 0 0 5px #ff0000, 0 0 10px #ff0000, 0 0 15px #ff0000, 0 0 20px #ff0000, 0 0 30px #ff0000, 0 0 40px #ff0000;
+        }
+    /* Parlama animasyonu */
+     @keyframes textColor {
+            0% { color: #ff3333; }
+            50% { color: #ff6600; }
+            100% { color: #ff3333; }
+        }
+
+        @media (max-width: 600px) {
+            .content {
+                font-size: 2.5rem;
+            }
+            .footer-content {
+                font-size: 1.2rem;
+            }
+            /* Parlama animasyonu */
+     @keyframes textColor {
+            0% { color: #ff3333; }
+            50% { color: #ff6600; }
+            100% { color: #ff3333; }
+        }
+        }
+    </style>
 </head>
 <body>
-  <h1>Bu site zuko tarafından halla geliştirilme aşamasındadır</h1>
+    <div class="content">
+        𝐇𝟒𝐂𝐊𝟑𝐃 𝐁𝐘 𝐙𝐔𝐊𝐎            
+    </div>
+    <div class="footer-content">
+       𝐕𝟖𝐑 𝐓𝐄𝐀𝐌     <br> 𝐓𝐄𝐀𝐌 𝐖𝐞𝐛 <br>
+    </div>
 </body>
 </html>
